--- a/BulletHell/.gitignore
+++ b/BulletHell/.gitignore
@@ -70,3 +70,65 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+BulletHell/Assets/TextMesh Pro/Sprites/EmojiOne.png.meta
+BulletHell/Assets/TextMesh Pro/Sprites/EmojiOne.png
+BulletHell/Assets/TextMesh Pro/Sprites/EmojiOne.json.meta
+BulletHell/Assets/TextMesh Pro/Sprites/EmojiOne.json
+BulletHell/Assets/TextMesh Pro/Sprites/EmojiOne Attribution.txt.meta
+BulletHell/Assets/TextMesh Pro/Sprites/EmojiOne Attribution.txt
+BulletHell/Assets/TextMesh Pro/Sprites.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMPro_Surface.cginc.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMPro_Surface.cginc
+BulletHell/Assets/TextMesh Pro/Shaders/TMPro_Properties.cginc.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMPro_Properties.cginc
+BulletHell/Assets/TextMesh Pro/Shaders/TMPro_Mobile.cginc.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMPro_Mobile.cginc
+BulletHell/Assets/TextMesh Pro/Shaders/TMPro.cginc.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMPro.cginc
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_Sprite.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_Sprite.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Surface.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Surface.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Surface-Mobile.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Surface-Mobile.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile SSD.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile SSD.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile Overlay.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile Overlay.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile Masking.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF-Mobile Masking.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF SSD.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF SSD.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF Overlay.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_SDF Overlay.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_Bitmap.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_Bitmap.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_Bitmap-Mobile.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_Bitmap-Mobile.shader
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_Bitmap-Custom-Atlas.shader.meta
+BulletHell/Assets/TextMesh Pro/Shaders/TMP_Bitmap-Custom-Atlas.shader
+BulletHell/Assets/TextMesh Pro/Shaders.meta
+BulletHell/Assets/TextMesh Pro/Resources/TMP Settings.asset.meta
+BulletHell/Assets/TextMesh Pro/Resources/TMP Settings.asset
+BulletHell/Assets/TextMesh Pro/Resources/Style Sheets/Default Style Sheet.asset.meta
+BulletHell/Assets/TextMesh Pro/Resources/Style Sheets/Default Style Sheet.asset
+BulletHell/Assets/TextMesh Pro/Resources/Style Sheets.meta
+BulletHell/Assets/TextMesh Pro/Resources/Sprite Assets/EmojiOne.asset.meta
+BulletHell/Assets/TextMesh Pro/Resources/Sprite Assets/EmojiOne.asset
+BulletHell/Assets/TextMesh Pro/Resources/Sprite Assets.meta
+BulletHell/Assets/TextMesh Pro/Resources/LineBreaking Leading Characters.txt.meta
+BulletHell/Assets/TextMesh Pro/Resources/LineBreaking Leading Characters.txt
+BulletHell/Assets/TextMesh Pro/Resources/LineBreaking Following Characters.txt.meta
+BulletHell/Assets/TextMesh Pro/Resources/LineBreaking Following Characters.txt
+BulletHell/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF.asset.meta
+BulletHell/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF.asset
+BulletHell/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Outline.mat.meta
+BulletHell/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Outline.mat
+BulletHell/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset.meta
+BulletHell/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Fallback.asset
+BulletHell/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Drop Shadow.mat.meta
+BulletHell/Assets/TextMesh Pro/Resources/Fonts & Materials/LiberationSans SDF - Drop Shadow.mat
